# gallery_twin

./: .dockerignore  .env.example  .gitignore  AZURE_FIX.md  Dockerfile  README.md  deploy.sh  docker-compose.yml  gallery.db  hello.py  pyproject.toml  requirements.txt  startup.sh
.github/workflows/: main_gallery-twin.yml
alembic/: alembic.ini  env.py
alembic/versions/: 001_initial_schema.py  002_add_exhibit_order_json.py  1e8eff13d73f_add_selfeval_json_to_sessions.py  6c9880b00e5c_add_gender_age_education_to_sessions.py  b8220fa8efff_add_completed_flag_to_sessions.py  c59ae0f5d98a_remove_gender_age_education_from_.py  c8831cbb50b0_add_master_image_to_exhibits.py  d183fc068c61_initial_schema.py  f2569b17d301_add_last_activity_to_sessions.py  f407fbafc990_add_language_support.py  f69b7d0c47c6_add_exhibition_feedback_json_field.py
alembic/versions_backup/: f2569b17d301_add_last_activity_to_sessions.py
app/: auth.py  db.py  dependencies.py  logging_config.py  main.py  middleware.py  models.py  schemas.py
app/routers/: admin.py  public.py
app/services/: analytics.py  (+7 more)
content/: exhibition_feedback.yml  selfeval.yml  site_copy.yml
db/: .gitkeep  gallery.db.backup
docs/: backlog.md  prd.md  questionare_2.md  questionare_3.md  questionare_format.yml
scripts/: clear_db.py  convert_pdf_to_png.py  delete_db.py  fill_demo_data.py  generate_example_images.py  resize_and_compress_png.py
tests/: README.md  TEST_SUMMARY.md  conftest.py  test_analytics.py  test_api.py  test_auth.py  test_content_loader.py  test_dependencies.py  test_exhibit_order.py  test_models.py
(+26 files in other folders)
