[project]
name = "gallery-twin"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.21.0",
    "alembic>=1.16.4",
    "black>=25.1.0",
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "isort>=6.0.1",
    "jinja2>=3.1.6",
    "mypy>=1.17.1",
    "pandas>=2.3.2",
    "pydantic>=2.11.7",
    "pytest>=8.4.1",
    "python-multipart>=0.0.20",
    "pyyaml>=6.0.2",
    "ruff>=0.12.10",
    "sqlmodel>=0.0.24",
    "uvicorn>=0.35.0",
    "itsdangerous>=2.2.0",
    "djlint>=1.36.4",
    "markdown>=3.8.2",
]
